--- a/machine_learning/credit_card_fraud_model.ipynb
+++ b/machine_learning/credit_card_fraud_model.ipynb
@@ -493,7 +493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A correlation matrix for the numeric variables is provided below, signifying a relationship between `creditLimit` and `availableMoney`. This correlation makes logical sense. Interestingly, there is no correlation between transactionAmount and any of the other numeric variables."
+    "A correlation matrix for the numeric variables is provided below, signifying a relationship between `creditLimit` and `availableMoney`. This correlation makes logical sense. Interestingly, there is no correlation between `transactionAmount` and any of the other numeric variables."
    ]
   },
   {
