--- a/machine_learning/credit_card_fraud_model.ipynb
+++ b/machine_learning/credit_card_fraud_model.ipynb
@@ -706,7 +706,7 @@
    "source": [
     "The distribution now looks much more normal, except for the very high count of $0 transactions still.\n",
     "\n",
-    "Non-parametric models (e.g. decision tree, support vector machine) would not be constrained to using the `transactionAmount` value with its currently skewed distribtion, since non-parametric models do not assume a specific form of its data. For the time being, we will not keep the log transformation for `transactionAmount`."
+    "Non-parametric models (e.g. decision tree, support vector machine) would not be constrained to using the `transactionAmount` value with its currently skewed distribtion, since non-parametric models do not assume a specific form of its data. For the time being, we will not keep the Box Cox transformation for `transactionAmount`."
    ]
   },
   {
@@ -976,7 +976,7 @@
    "source": [
     "### Programmatically Identifying Multi-Swipe Transactions\n",
     "\n",
-    "The second of the two phenomenons that we need to address is the presence of transaction “multi-swipes” in the data. i.e., a transaction that is a duplicate charge of a customer’s card by the same merchant for the same amount in a short timespan. Below is the programmatic approach to counting the number of records and associated dollars with mult-swipes, ensuring that the origina swipe associated with the multi-swipe is not included."
+    "The second of the two phenomenons that we need to address is the presence of transaction “multi-swipes” in the data. i.e., a transaction that is a duplicate charge of a customer’s card by the same merchant for the same amount in a short timespan. Below is the programmatic approach to counting the number of records and associated dollars with mult-swipes, ensuring that the original swipe associated with the multi-swipe is not included."
    ]
   },
   {
@@ -1298,7 +1298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following section calculates the z-scores of the time from the previous purchase and the `transactionAmount`, at the `customerId` level and the combination of `customerId` and `merchantCategoryCode`. It also calculates the  and `transactionAmount` z-scores at the `merchantCategoryCode` level. \n",
+    "The following section calculates the z-scores of the time from the previous purchase and the `transactionAmount`, at the `customerId` level and the combination of `customerId` and `merchantCategoryCode`. It also calculates the  and `transactionAmount` z-scores at the `merchantCategoryCode` level and the `customerId` level. \n",
     "\n",
     "The mean and standard deviations are captured for each of the above-mentioned combinations so that the z-scores of any future records could be easily calculated if the pipeline was operationalized. "
    ]
