--- a/machine_learning/credit_card_fraud_model.ipynb
+++ b/machine_learning/credit_card_fraud_model.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "### Loading the data\n",
     "\n",
-    "The .zip file is downloaded from the specified GitHub location and placed in a temporary directory. The json data contained in the transactions.txt file is then uncompressed and loaded as a Pandas dataframe into the Python environment. Once the data is loaded into session memory, the temporary directory is closed."
+    "The .zip file is downloaded from the specified Amazon S3 bucket and placed in a temporary directory. The json data contained in the transactions.txt file is then uncompressed and loaded as a Pandas dataframe into the Python environment. Once the data is loaded into session memory, the temporary directory is closed."
    ]
   },
   {
