Update and rename fraud_model (4).ipynb to credit_card_fraud_identification.ipynb

--- a/machine_learning/credit_card_fraud_identification.ipynb
+++ b/machine_learning/credit_card_fraud_identification.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Overview\n",
     "\n",
-    "This document details the work performed and insights gained from the Capital One Data Science Challenge v19.04. It is written by Brandon Shelton in Python 3.7.2 on an AWS t2.2xlarge EC2 Linux instance, and contains 4 sections:\n",
+    "This document details the work performed to identify fraudulent activity from synthetic credit card transactions. It is written by Brandon Shelton in Python 3.7.2 on an AWS t2.2xlarge EC2 Linux instance, and contains 4 sections:\n",
     "\n",
     "1. **Load and Describe the Data**<br/><br/>\n",
     "\n",
