--- a/machine_learning/supervised_machine_learning.ipynb
+++ b/machine_learning/supervised_machine_learning.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Overview\n",
     "\n",
-    "This document details the development of a supervised machine learning model to identify fraud transactions from a synthetic credit card dataset. It is written by Brandon Shelton in Python 3.7.2 on an AWS t2.2xlarge EC2 Linux instance, and contains 4 sections:\n",
+    "This document details the development and evaluation of several supervised machine learning models that identify fraud transactions from a synthetic credit card dataset. It is written by Brandon Shelton in Python 3.7.2 on an AWS t2.2xlarge EC2 Linux instance, and contains 4 sections:\n",
     "\n",
     "1. **Load and Describe the Data**<br/><br/>\n",
     "\n",
