--- a/machine_learning/supervised_machine_learning.ipynb
+++ b/machine_learning/supervised_machine_learning.ipynb
@@ -75,7 +75,7 @@
     "from zipfile import ZipFile\n",
     "from io import BytesIO\n",
     "\n",
-    "url_loc = urllib.request.urlopen('https://raw.githubusercontent.com/CapitalOneRecruiting/DS/master/transactions.zip')\n",
+    "url_loc = urllib.request.urlopen('https://s3.us-east-2.amazonaws.com/example.data/transactions.zip')\n",
     "zfile = ZipFile(BytesIO(url_loc.read()))\n",
     "\n",
     "# Create the temporary directory to store the zip file's content\n",
