--- a/machine_learning/supervised_machine_learning.ipynb
+++ b/machine_learning/supervised_machine_learning.ipynb
@@ -106,7 +106,7 @@
    "source": [
     "### Describing the data. \n",
     "\n",
-    "Evaluate the amount of null values, empty strings values, unique values, and frequency ratio values for each column in the dataset. The frequency ratio is defined as the ratio of the first most frequent value of the column copared to the second most frequent. "
+    "Evaluate the amount of null values, empty strings values, unique values, and frequency ratio values for each column in the dataset. The frequency ratio is defined as the ratio of the first most frequent value of the column compared to the second most frequent. "
    ]
   },
   {
