--- a/machine_learning/supervised_machine_learning.ipynb
+++ b/machine_learning/supervised_machine_learning.ipynb
@@ -825,7 +825,7 @@
    "source": [
     "The distribution now looks much more normal, except for the very high count of $0 transactions still.\n",
     "\n",
-    "Non-parametric models (e.g. decision tree, support vector machine) would not be constrained to using the `transactionAmount` value with its currently skewed distribtion, since non-parametric models do not assume a specific form of its data. For the time being, we will not keep the log transformation for `transactionAmount`."
+    "Non-parametric models (e.g. decision tree, support vector machine) would not be constrained to using the `transactionAmount` value with its currently skewed distribtion, since non-parametric models do not assume a specific form of its data. For the time being, we will not keep the Box Cox transformation for `transactionAmount`."
    ]
   },
   {
@@ -1237,7 +1237,7 @@
     }
    ],
    "source": [
-    "# For this exercise, we will consider a multi-swipe to be a uplicate charge of a customer's card by:\n",
+    "# For this exercise, we will consider a multi-swipe to be a duplicate charge of a customer's card by:\n",
     "# the same merchant, for the same transactionAmount, within a five minute window.\n",
     "\n",
     "# Format the transactionDateTime field to dtype datetime64.\n",
