--- a/machine_learning/supervised_machine_learning.ipynb
+++ b/machine_learning/supervised_machine_learning.ipynb
@@ -1875,7 +1875,7 @@
     "\n",
     "Due to the heavily imbalanced Class label, techniques will be applied to balance the training data’s Class labels in order for the model to better recognize the minority class. The test data’s Class prevelance will not be altered.\n",
     "\n",
-    "The Area Under the Curve will be used as the measure of performance. The Area Under the Curve measures the trade-off between True Positives (Sensitivity) and False Positives (1 - Specificity). i.e., how good is the model at finding correct fraud transactions while not mis-labeling too many non-fraud transactions as “fraud” in the process? This is balance is important to a company like Capital One because there is a trade-off for the organization in being able to stop true fraud and causing unnecessary inconveniences to its customers when it intervenes on fraud false positives."
+    "The Area Under the Curve will be used as the measure of performance. The Area Under the Curve measures the trade-off between True Positives (Sensitivity) and False Positives (1 - Specificity). i.e., how good is the model at finding correct fraud transactions while not mis-labeling too many non-fraud transactions as “fraud” in the process? This is balance is important to banks because there is a trade-off for the organization in being able to stop true fraud and causing unnecessary inconveniences to its customers when it intervenes on fraud false positives."
    ]
   },
   {
@@ -2618,6 +2618,7 @@
    "source": [
     "from sklearn.feature_selection import RFE\n",
     "\n",
+    "# Extract the 75 most important features from the base random forest model.\n",
     "rfe_rf = RFE(base_rf, 75)\n",
     "\n",
     "rfe_rf.fit(train_X, train_y)\n",
@@ -2752,7 +2753,7 @@
     {
      "data": {
       "text/plain": [
-       "'Testing set shape = (44934, 102)'"
+       "'Watchlist set shape = (44934, 102)'"
       ]
      },
      "metadata": {},
@@ -2809,7 +2810,7 @@
     "\n",
     "\n",
     "display('Training set shape = ' + str(X_train_tr.shape))\n",
-    "display('Testing set shape = ' + str(X_train_watchlist.shape))\n",
+    "display('Watchlist set shape = ' + str(X_train_watchlist.shape))\n",
     "\n",
     "\n",
     "Xy_train_tr = pd.concat([X_train_tr, y_train_tr], axis = 1)\n",
