--- a/visualization/fish_restaurant_case_study.ipynb
+++ b/visualization/fish_restaurant_case_study.ipynb
@@ -34,13 +34,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Counterfactual Analysis\n",
-    "\n",
     "#### Question\n",
-    "Holding all other variables constant, should Fenmark Fish Restaurant reduce wastage in order to maximize profits?\n",
+    "Holding all other variables constant, should Fenmark Fish Restaurant reduce their restaurants' static, daily order sizes in order to maximize profits?\n",
     "\n",
     "#### Approach to Answer\n",
-    "Counterfactual analysis that compares what the profits would have been over the previous year at every possible daily order count between 1 and each restaurant's respective, current daily order count."
+    "Calculate and compare what the previous year's profits would have been at every possible daily order count between 1 and each restaurant's respective, current daily order count."
    ]
   },
   {
@@ -191,7 +189,7 @@
     "### Conclusion\n",
     "Neither restaurant would be better off by decreasing the size of their daily orders. Between an order of 1 fish and the current daily order for each restaurant, their current daily order maximizes profits over the past year of experience.\n",
     "\n",
-    "The second plot above shows that the difference in profits between the current iteration order size (x) and the previous iteration order size (x-1) drops off more steeply for the \"high waste\" restaurant. This is due to the fact that the \"low waste\" restaurant's daily sales distribution has less variance than \"high waste\" restaurant's daily sales distribution, and both distributions are severly underdispersed.\n",
+    "The second plot above shows that the difference in profits between the current iteration order size (x) and the previous iteration order size (x-1). The difference in profits drops off more steeply for the \"high waste\" restaurant. This is due to the fact that the \"low waste\" restaurant's daily sales distribution has less variance than \"high waste\" restaurant's daily sales distribution, and both distributions are severly underdispersed.\n",
     "\n",
     "### Recommendation\n",
     "Increase the daily fish order size for both restaurants, though not sure by how much since true fish sales demand is unknown on days where sales are currently capped by the order limit. Based on both plots above, it seems as though the \"low waste\" restaurant would benefit from a larger order increase than the \"high waste\" restaurant."
